# CleanMyMac-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  lib.rs  main.rs
src/cleaner/: mod.rs
src/rules/: devtools.rs  docker.rs  heuristic.rs  linux.rs  macos.rs  macos_apps.rs  misc.rs  mod.rs  trash.rs
src/scanner/: analyzer.rs  file_scanner.rs  mod.rs  treemap.rs
src/ui/: cli.rs  mod.rs  tui.rs
