[package]
name = "cleanmymac-rs"
version = "1.0.0"
edition = "2024"
description = "A cross-platform system cleaner for macOS and Linux"
license = "MIT"
authors = ["CleanMyMac-rs Contributors"]
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/BoBppy/CleanMyMac-rs"
keywords = ["cleaner", "cache", "macos", "linux", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
# CLI - 完整 help 支持
clap = { version = "4", features = ["derive", "cargo", "wrap_help"] }

# File operations
walkdir = "2"
ignore = "0.4"
dirs = "5"
trash = "5"

# System info
sysinfo = "0.36"

# TUI
ratatui = "0.29"
crossterm = "0.29"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Parallel processing - Rust 高效特性
rayon = "1"

# Logging & Progress
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"

# Utils
bytesize = "2"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
colored = "2"

# User confirmation
dialoguer = "0.12"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
